# 42vienna-robotframework-workshop

./: .gitignore  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: pr-feedback.yml  robot-tests.yml
docs/: 03-browser-library-guide.md  04-exercises.md  06-ai-assisted-testing.md  07-student-workflow.md  badge.json  presentation.html  windows-setup.md  workshop-agenda.md
resources/: cart_page.resource  product_list.resource  saucedemo.resource
scripts/: check_environment.py
tests/05_checkout_tests/: checkout_flow.robot
tests/06_e2e_scenarios/: complete_purchase.robot
tests/student_exercises/: README.md  _template.robot  mehras_00.robot  mehrasmeydani_exercise_1.robot  test_pr_workflow.robot
